fix: UI spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ body {
   width: 100%;
   height: 100%;
   overflow-y: auto;
-  padding: 10px 14px 132px;
+  padding: 14px 14px 132px;
 }
 
 .screen-teal {
